--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-Jolly-Corner_1190
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: James, Henry
@@ -10,6 +13,8 @@ creator:
     wikipedia: http://en.wikipedia.org/wiki/Henry_James
 description: Project Gutenberg Etexts; The Jolly Corner; Contents; CHAPTER I; CHAPTER
   II; CHAPTER III; Using Acrobat.
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/1190#The-Jolly-Corner
 gutenberg_issued: '1998-02-01'
 gutenberg_type: Text
 identifiers:
